# nav-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/nav-attitude/: Cargo.toml
crates/nav-attitude/proptest-regressions/: quat.txt
crates/nav-attitude/src/: dcm.rs  euler.rs  jpl.rs  lib.rs  numerics.rs  quat.rs  rotvec.rs
crates/nav-attitude/tests/: nalgebra_oracle.rs
crates/nav-eskf/: .gitignore  Cargo.toml  notes.lyx
crates/nav-eskf/examples/: eskf_nees.rs
crates/nav-eskf/src/: lib.rs  sim.rs
crates/nav-eskf/tests/: consistency.rs
crates/nav-imu/: .gitignore  Cargo.toml
crates/nav-imu/examples/: allan_bathtub.rs  ins_deadreckon.rs
crates/nav-imu/src/: ins.rs  lib.rs
crates/nav-imu/tests/: sample_model.rs
crates/nav-kf/: Cargo.toml
crates/nav-kf/examples/: cv_tracking.rs
crates/nav-kf/src/: lib.rs  sim.rs
crates/nav-kf/tests/: consistency.rs
crates/nav-manifold/: Cargo.toml
crates/nav-manifold/src/: diff.rs  lib.rs  manifold.rs
docs/: make_plots.py
