[package]
name = "nav-eskf"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
nalgebra = { workspace = true }
nav-attitude = { workspace = true }
nav-imu = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
statrs = { workspace = true }
