[package]
name = "nav-imu"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
nav-attitude = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
nalgebra = { workspace = true }
derive_more = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
statrs = { workspace = true }
