[package]
name = "nav-kf"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
nalgebra = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
statrs = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
approx = { workspace = true }
rerun = { workspace = true }
